UI nun komplett auf Deutsch

--- a/src/MiracleList_Backend/wwwroot/Index.html
+++ b/src/MiracleList_Backend/wwwroot/Index.html
@@ -55,15 +55,23 @@
      <a class="list-group-item" href="/swagger">API-Hilfeseiten (v1 and v2)</a><br />
      <a class="list-group-item" href="/clientid">Client ID beantragen</a><br />
 
+
+     <div class="row">
+      <div class="col-xs-6">
+       <a class="list-group-item" href="https://miraclelist-vue.azurewebsites.net">MiracleList Web UI (TypeScript/Vue.js)</a><br />
+      </div>
+      <div class="col-xs-6">
+       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListVue">Quellcode auf Github</a><br />
+      </div>
+     </div>
+
      <div class="row">
       <div class="col-xs-6">
        <a class="list-group-item" href="https://miraclelist.azurewebsites.net">MiracleList Web UI (TypeScript/Angular)</a><br />
       </div>
-
       <div class="col-xs-6">
-       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListClient">Quellcode auf Github</a><br />
+       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListAngular">Quellcode auf Github</a><br />
       </div>
-
      </div>
 
      <div class="row">
@@ -72,7 +80,7 @@
       </div>
 
       <div class="col-xs-6">
-       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListClient">Quellcode auf Github</a><br />
+       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListAngular">Quellcode auf Github</a><br />
       </div>
 
      </div>
@@ -83,7 +91,7 @@
       </div>
 
       <div class="col-xs-6">
-       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListClient">Quellcode auf Github</a><br />
+       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListAngular">Quellcode auf Github</a><br />
       </div>
 
      </div>
@@ -96,22 +104,12 @@
       </div>
 
       <div class="col-xs-6">
-       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListClient">Quellcode auf Github</a><br />
+       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListAngular">Quellcode auf Github</a><br />
       </div>
 
      </div>
 
 
-     <div class="row">
-      <div class="col-xs-6">
-       <a class="list-group-item" href="https://miraclelist-vue.azurewebsites.net">MiracleList Web UI (TypeScript/Vue.js)</a><br />
-      </div>
-
-      <div class="col-xs-6">
-       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListVueTutorial">Quellcode auf Github</a><br />
-      </div>
-
-     </div>
 
      <div class="row">
       <div class="col-xs-6">
@@ -119,7 +117,7 @@
       </div>
 
       <div class="col-xs-6">
-       <a class="list-group-item" target="_blank" href="https://www.IT-Visions.de/BlazorBuch">Quellcode im Buch "Blazor"</a>
+       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListNET">Quellcode auf Github</a><br />
       </div>
 
      </div>
@@ -130,7 +128,7 @@
       </div>
 
       <div class="col-xs-6">
-       <a class="list-group-item" target="_blank" href="https://www.IT-Visions.de/BlazorBuch">Quellcode im Buch "Blazor"</a>
+       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListNET">Quellcode auf Github</a><br />
       </div>
 
      </div>
@@ -141,7 +139,19 @@
       </div>
 
       <div class="col-xs-6">
-       <a class="list-group-item" target="_blank" href="https://www.IT-Visions.de/BlazorBuch">Quellcode im Buch "Blazor"</a>
+       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListNET">Quellcode auf Github</a><br />
+      </div>
+
+     </div>
+
+
+     <div class="row">
+      <div class="col-xs-6">
+       <a class="list-group-item" href="https://www.IT-Visions.de/BlazorBuch">MiracleList Cross-Platform-App für Windows, Android, iOS, macOS und Tizen (C#/Blazor MAUI/.NET MAUI)</a><br />
+      </div>
+
+      <div class="col-xs-6">
+       <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListNET">Quellcode auf Github</a><br />
       </div>
 
      </div>
