Fehlerbehandlung verbessert Fix Problem bei Deployment

--- a/src/MiracleList_BD/wwwroot/index.html
+++ b/src/MiracleList_BD/wwwroot/index.html
@@ -20,11 +20,11 @@
  <link rel="apple-touch-icon" sizes="512x512" href="MiracleListIcon-512.png" />
 
  <!-- Bundle aller CSS-Dateien, die Razor Components zugeordnet sind-->
- <link href="MiracleList_BD.styles.css" rel="stylesheet" />
+ <link href="/MiracleList_BD.styles.css" rel="stylesheet" />
 
  <!--Für Radzen Components-->
- <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
- <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+ <link rel="stylesheet" href="/_content/Radzen.Blazor/css/default-base.css">
+ <script src="/_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 
  <!-- Für BlazorContextMenu https://github.com/stavroskasidis/BlazorContextMenu -->
  <link rel="stylesheet" href="/_content/Blazor.ContextMenu/blazorContextMenu.min.css" />
