--- a/src/MiracleList_Backend/wwwroot/Index.html
+++ b/src/MiracleList_Backend/wwwroot/Index.html
@@ -31,6 +31,7 @@
       <li><a target="_blank" href="https://miraclelist-vue.azurewebsites.net/">TypeScript/Vue.js</a> im Browser</li>
       <li><a target="_blank" href="https://miraclelist-bs.azurewebsites.net/">C#/Blazor Server</a> im Browser</li>
       <li><a target="_blank" href="https://miraclelist-bw.azurewebsites.net/">C#/Blazor WebAssembly</a> im Browser</li>
+      <li><a target="_blank" href="https://miraclelist-bu.azurewebsites.net/">C#/Blazor United (Auto-Render-Mode)</a> im Browser</li>
       <li>C#/Blazor Desktop auf Windows (<a target="_blank" href="https://www.IT-Visions.de/BlazorBuch">Code im Buch "Blazor"</a>)</li>
      </ul>
 
