--- a/src/MiracleList_BW/wwwroot/index.html
+++ b/src/MiracleList_BW/wwwroot/index.html
@@ -12,7 +12,7 @@
 
  <!-- Eigenständige CSS-Dateien und ICO-Datei aus wwwroot der RLCs -->
  <link rel="stylesheet" href="/_content/MLBlazorRCL/styles.css" />
- <link rel="stylesheet" href="/_content/ITVisions.Blazor/styles.css" />
+ <link rel="stylesheet" href="/_content/ITVisions.Blazor/css/itvstyles.css" />
  <link rel="icon" type="image/vnd.microsoft.icon" href="/_content/MLBlazorRCL/favicon.ico">
 
  <!-- Für PWA-->
