--- a/src/MiracleList_BW/wwwroot/index.html
+++ b/src/MiracleList_BW/wwwroot/index.html
@@ -4,6 +4,11 @@
  <meta charset="utf-8" />
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+ <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp" />
+ <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
+
+
  <title>MiracleList_BW -- lädt...</title>
  <base href="/" />
 
