--- a/src/MiracleList_Backend/wwwroot/Index.html
+++ b/src/MiracleList_Backend/wwwroot/Index.html
@@ -32,7 +32,7 @@
     <br />
     <div class="list-group ">
 
-     <div class="jumbotron" style="padding-top:5px;padding-bottom:10px">
+     <div class="jumbotron" style="padding-top:5px;padding-bottom:30px">
       <h1 class="display-4">Auf diesem Server</h1>
       <a class="list-group-item" href="/about">Server and Version Info</a><br />
       <!--<a class="list-group-item" href="/UserStatistics">User Statistics</a><br />-->
@@ -41,7 +41,8 @@
       <a class="list-group-item" href="/swagger/v2/swagger.json">Swagger OpenAPI Specification (OAS) für API v2 (JSON)</a><br />
       <a class="list-group-item" href="/swagger">API-Hilfeseiten (v1 and v2)</a><br />
       <a class="list-group-item" href="/clientid">Client ID beantragen</a><br />
-</div>
+      <a class="list-group-item" href="/imprint">Impressum</a>
+     </div>
 
       <div class="jumbotron" style="padding-top:5px;padding-bottom:10px">
        <h1 class="display-4">Verfügbare Frontends</h1>
@@ -84,23 +85,16 @@
         <div class="col-xs-4">
          <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListAngular">Quellcode auf Github</a><br />
         </div>
-
        </div>
-
 
        <div class="row">
         <div class="col-xs-8">
-
          <a class="list-group-item" href="https://Miraclelist.azurewebsites.net/download/MiracleListElectron-darwin-x64.zip">MiracleList Desktop App für MacOS (Download, ZIP-Archiv, ~44 MB)</a><br />
         </div>
-
         <div class="col-xs-4">
          <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListAngular">Quellcode auf Github</a><br />
         </div>
-
        </div>
-
-
 
        <div class="row">
         <div class="col-xs-8">
@@ -140,9 +134,7 @@
         <div class="col-xs-4">
          <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListNET">Quellcode auf Github</a><br />
         </div>
-
        </div>
-
 
        <div class="row">
         <div class="col-xs-8">
@@ -152,9 +144,7 @@
         <div class="col-xs-4">
          <a class="list-group-item" href="https://github.com/HSchwichtenberg/MiracleListNET">Quellcode auf Github</a><br />
         </div>
-
        </div>
-
 
        <div class="row">
         <div class="col-xs-8">
@@ -167,8 +157,6 @@
 
        </div>
       </div>
-
-      <a class="list-group-item" href="/imprint">Impressum</a><br />
 
      </div>
     </div>
