--- a/src/MiracleList_BM/wwwroot/index.html
+++ b/src/MiracleList_BM/wwwroot/index.html
@@ -11,7 +11,10 @@
  <script src="/_content/ITVisions.Blazor/js/jquery.min.js" defer></script>
  <script src="/_content/ITVisions.Blazor/js/bootstrap.min.js" defer></script>
 
- <!--Eigenenständige CSS-Dateien -->
+ <!-- Font Awesome -->
+ <link href="/_content/ITVisions.Blazor/css/fontawesome/css/all.min.css" rel="stylesheet" />
+
+ <!--Eigenständige CSS-Dateien -->
  <link rel="icon" type="image/vnd.microsoft.icon" href="/_content/MLBlazorRCL/favicon.ico">
  <link href="/_content/MLBlazorRCL/styles.css" rel="stylesheet" />
 
