--- a/src/MiracleList_BW/wwwroot/index.html
+++ b/src/MiracleList_BW/wwwroot/index.html
@@ -29,6 +29,9 @@
  <script src="/_content/ITVisions.Blazor/js/jquery.min.js" defer></script>
  <script src="/_content/ITVisions.Blazor/js/bootstrap.min.js" defer></script>
 
+ <!-- Font Awesome (aus RCL ITVisions.Blazor) -->
+ <link href="/_content/ITVisions.Blazor/css/fontawesome/css/all.min.css" rel="stylesheet" />
+
  <!-- Für Radzen Components-->
  <link rel="stylesheet" href="/_content/Radzen.Blazor/css/default-base.css">
  <script src="/_content/Radzen.Blazor/Radzen.Blazor.js"></script>
