--- a/src/MiracleList_BD/wwwroot/index.html
+++ b/src/MiracleList_BD/wwwroot/index.html
@@ -6,12 +6,15 @@
  <title>MiracleList_BD</title>
  <base href="/" />
 
- <!--Bootstrap -->
+ <!-- Bootstrap -->
  <link href="/_content/ITVisions.Blazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
  <script src="/_content/ITVisions.Blazor/js/jquery.min.js" defer></script>
  <script src="/_content/ITVisions.Blazor/js/bootstrap.min.js" defer></script>
 
- <!--Eigenenständige CSS-Dateien -->
+ <!-- Font Awesome -->
+ <link href="/_content/ITVisions.Blazor/css/fontawesome/css/all.min.css" rel="stylesheet" />
+
+ <!-- Eigenständige CSS-Dateien -->
  <link rel="icon" type="image/vnd.microsoft.icon" href="/_content/MLBlazorRCL/favicon.ico">
  <link href="/_content/MLBlazorRCL/styles.css" rel="stylesheet" />
 
